@@ -489,7 +489,8 @@ void
     (let ((decode-code (gen-decoder insn-list initial-bitnums
 				    decode-bitsize
 				    "    " lsb0?
-				    (current-insn-lookup 'x-invalid))))
+				    (current-insn-lookup 'x-invalid)
+				    #f)))
 
       (string-write
        "\
